[gd_scene load_steps=3 format=2]

[ext_resource path="res://scenes/save_load/save_load.tres" type="Theme" id=1]
[ext_resource path="res://scenes/save_load/save_load.gd" type="Script" id=2]

[node name="SaveLoad" type="CanvasLayer"]
pause_mode = 2
layer = 2
script = ExtResource( 2 )

[node name="SlotsPop" type="PopupPanel" parent="."]
visible = true
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -120.0
margin_top = -67.5
margin_right = 120.0
margin_bottom = 67.5
rect_min_size = Vector2( 240, 135 )
theme = ExtResource( 1 )
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="Scroll" type="ScrollContainer" parent="SlotsPop"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 4.0
margin_top = 4.0
margin_right = -4.0
margin_bottom = -4.0
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="VBox" type="VBoxContainer" parent="SlotsPop/Scroll"]
margin_right = 232.0
margin_bottom = 127.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Slots" type="VBoxContainer" parent="SlotsPop/Scroll/VBox"]
margin_right = 232.0
margin_bottom = 103.0
size_flags_horizontal = 3
size_flags_vertical = 3
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBox" type="HBoxContainer" parent="SlotsPop/Scroll/VBox"]
margin_top = 107.0
margin_right = 232.0
margin_bottom = 127.0
alignment = 1

[node name="NewSlot" type="Button" parent="SlotsPop/Scroll/VBox/HBox"]
margin_left = 42.0
margin_right = 110.0
margin_bottom = 20.0
text = "New Slot"

[node name="DeleteAll" type="Button" parent="SlotsPop/Scroll/VBox/HBox"]
margin_left = 114.0
margin_right = 190.0
margin_bottom = 20.0
text = "Delete All"

[node name="Options" type="WindowDialog" parent="."]
visible = true
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -60.0
margin_top = -33.5
margin_right = 60.0
margin_bottom = 33.5
rect_min_size = Vector2( 120, 67 )
window_title = "Options"
__meta__ = {
"_edit_lock_": true
}

[node name="VBox" type="VBoxContainer" parent="Options"]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_lock_": true
}

[node name="Save" type="Button" parent="Options/VBox"]
margin_right = 120.0
margin_bottom = 20.0
size_flags_horizontal = 3
size_flags_vertical = 4
text = "Save"

[node name="Load" type="Button" parent="Options/VBox"]
margin_top = 24.0
margin_right = 120.0
margin_bottom = 44.0
size_flags_horizontal = 3
size_flags_vertical = 4
text = "Load"

[node name="Delete" type="Button" parent="Options/VBox"]
margin_top = 48.0
margin_right = 120.0
margin_bottom = 68.0
size_flags_horizontal = 3
size_flags_vertical = 4
text = "Delete"

[node name="Error" type="AcceptDialog" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -60.0
margin_top = -33.5
margin_right = 60.0
margin_bottom = 33.5
rect_min_size = Vector2( 120, 67 )
dialog_text = "Error saving file."
dialog_autowrap = true
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="DeleteConfirm" type="ConfirmationDialog" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -78.0
margin_top = -33.5
margin_right = 78.0
margin_bottom = 33.5
rect_min_size = Vector2( 120, 67 )
dialog_text = "Delete save(s)?"
dialog_autowrap = true
__meta__ = {
"_edit_lock_": true
}

[connection signal="pressed" from="SlotsPop/Scroll/VBox/HBox/NewSlot" to="." method="_on_new_slot_pressed"]
[connection signal="pressed" from="SlotsPop/Scroll/VBox/HBox/DeleteAll" to="." method="_on_delete_all_pressed"]
[connection signal="pressed" from="Options/VBox/Save" to="." method="_on_save_pressed"]
[connection signal="pressed" from="Options/VBox/Load" to="." method="_on_load_pressed"]
[connection signal="pressed" from="Options/VBox/Delete" to="." method="_on_delete_pressed"]
[connection signal="confirmed" from="DeleteConfirm" to="." method="_on_delete_confirm_confirmed"]
